src/main/java/com/example/finalproject/_core/error/exception/SSRException500.java
package com.example.finalproject._core.error.exception;

public class SSRException500 extends RuntimeException{

    public SSRException500(String msg) {
        super(msg);
    }
}
